# Wolf3d

./: CMakeLists.txt  Makefile  README.md  determine_map_size.c  draw.c  fdf  free_allocated_memory.c  key.c  main.c  map_reader.c  mod_strsplit.c  read_textures.c  texture.cpp  window.c  wolf.h  wolf3d
libft/: get_next_line.c  libft.h
maps/: world_map_1.txt  world_map_2.txt  world_map_2_holes_in_walls.txt
pics_xpm/: bluestone.xpm  colorstone.xpm  eagle.xpm  greenlight.xpm  greystone.xpm  mossy.xpm  pillar.xpm  purplestone.xpm  redbrick.xpm  wood.xpm
